--- a/res/layout/actionbar_tab_lay.xml
+++ b/res/layout/actionbar_tab_lay.xml
@@ -1,10 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
-<TextView xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    style="@style/text_style_big"
-    android:id="@id/activity_actionbar_tab_val"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="fill_parent" android:layout_height="fill_parent">
+    <TextView 
+	    android:layout_width="wrap_content"
+	    android:layout_height="wrap_content"
+	    style="@style/text_style_tab"
+	    android:id="@id/activity_actionbar_tab_val"
+	    android:text="消息"
+	  
+	    android:layout_centerInParent="true"
      >
-    
+	</TextView>
+</RelativeLayout>
 
-</TextView>
+
