--- a/res/values/styles.xml
+++ b/res/values/styles.xml
@@ -370,6 +370,17 @@
         <item name="android:layout_height">wrap_content</item>
         <item name="android:singleLine">true</item>
     </style>
+    
+      <style name="text_style_tab">
+        <item name="android:textSize">20sp</item>
+        <item name="android:textColor">@color/TextColorBlack</item>
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:gravity">left</item>
+        <item name="android:singleLine">true</item>
+        <item name="android:paddingTop">10dp</item>
+       
+    </style>
 
 
 </resources>
