--- a/res/layout/chat_input_field.xml
+++ b/res/layout/chat_input_field.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
+    android:layout_width="fill_parent"
     android:layout_height="wrap_content"
     android:orientation="vertical" >
 
@@ -18,6 +18,16 @@
             android:layout_height="fill_parent"
             android:layout_weight="0.15"
             android:gravity="bottom|center_horizontal" >
+
+
+
+            <TextView
+                android:id="@+id/add_record"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:background="@drawable/chat_input_voice_btn_style" 
+                android:layout_marginBottom="9dp"/>
+
 
             <TextView
                 android:id="@+id/add_record"
@@ -40,23 +50,33 @@
                 android:layout_marginBottom="9dp"
                 android:background="@drawable/chat_input_add_btn_style"
                 android:clickable="true" />
+
         </RelativeLayout>
+
+        
 
         <RelativeLayout
             android:layout_width="0dp"
             android:layout_height="fill_parent"
-            android:layout_weight="0.5"
+         
+
+            android:layout_weight="0.55"
+
             android:gravity="bottom|center_horizontal" >
 
             <EditText
                 android:id="@+id/input_field"
-                android:layout_width="200dp"
+                android:layout_width="230dp"
                 android:layout_height="wrap_content"
-                android:layout_marginBottom="10dp"
+				android:textCursorDrawable="@null"
+				android:cursorVisible="true"
+                android:maxHeight="90dp"
                 android:background="@drawable/chat_textview_bg"
                 android:inputType="textMultiLine|text"
-                android:maxHeight="90dp"
-                android:textColor="#000000" />
+                android:textColor="#000000" 
+                android:layout_marginBottom="10dp"/>
+
+
         </RelativeLayout>
 
         <RelativeLayout
@@ -69,12 +89,15 @@
                 android:id="@+id/chat_send"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginBottom="11dp"
-                android:background="@drawable/button_small_white_style"
+
                 android:clickable="true"
-                android:gravity="center"
+                android:text="发送" 
                 android:padding="6dp"
-                android:text="发送" />
+                android:gravity="center"
+                android:background="@drawable/button_small_white_style"
+                android:layout_marginBottom="11dp"/>
+
+
         </RelativeLayout>
         <!--
                  <TextView
