--- a/res/layout/chat_input_field.xml
+++ b/res/layout/chat_input_field.xml
@@ -10,6 +10,8 @@
         android:layout_height="wrap_content"
         android:background="@drawable/chat_input_lay_bg"
         android:baselineAligned="false"
+        android:focusable="true"  
+        android:focusableInTouchMode="true"
         android:orientation="horizontal"
         android:visibility="visible" >
 
@@ -25,16 +27,12 @@
                 android:id="@+id/add_record"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:clickable="true"
                 android:background="@drawable/chat_input_voice_btn_style" 
                 android:layout_marginBottom="9dp"/>
 
 
-            <TextView
-                android:id="@+id/add_record"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginBottom="9dp"
-                android:background="@drawable/chat_input_voice_btn_style" />
+          
         </RelativeLayout>
 
         <RelativeLayout
@@ -49,6 +47,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="9dp"
                 android:background="@drawable/chat_input_add_btn_style"
+                 
                 android:clickable="true" />
 
         </RelativeLayout>
@@ -68,7 +67,8 @@
                 android:id="@+id/input_field"
                 android:layout_width="230dp"
                 android:layout_height="wrap_content"
-				android:textCursorDrawable="@null"
+               
+				android:textCursorDrawable="@color/TextColorBlack"
 				android:cursorVisible="true"
                 android:maxHeight="90dp"
                 android:background="@drawable/chat_textview_bg"
@@ -114,7 +114,7 @@
 
     <include
         android:id="@+id/question_popup_layout"
-        layout="@layout/question_popup_layout"
+        layout="@layout/question_popup_layout_withoutrecord"
         android:visibility="gone" />
 
 </LinearLayout>
