--- a/res/layout/login_layout.xml
+++ b/res/layout/login_layout.xml
@@ -56,7 +56,7 @@
             android:textColor="#ffffffff" />
     </FrameLayout> -->
 
-    <FrameLayout android:gravity="center" android:layout_width="fill_parent" android:layout_height="wrap_content" >
+    <FrameLayout android:gravity="center" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="30dp">
         <ImageView android:layout_gravity="center" android:src="@drawable/avatar_example" android:layout_centerInParent="true" android:layout_width="wrap_content" android:layout_height="wrap_content"/>
         <ImageView android:id="@id/avatar_val" android:layout_gravity="center" android:src="@drawable/avatar_shade_big" android:layout_width="wrap_content" android:layout_height="wrap_content"/>
         
@@ -220,7 +220,8 @@
 	        android:layout_width="wrap_content"
 	        android:layout_height="wrap_content"
 	        android:src="@drawable/login_arrow_up" 
-	        android:layout_gravity="center_horizontal"/>
+	        android:layout_gravity="center_horizontal"
+	        android:visibility="visible"/>
 	</FrameLayout>
 	
 </RelativeLayout>
