--- a/res/layout/question_item.xml
+++ b/res/layout/question_item.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="fill_parent"
+    android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_margin="5dp"
     android:background="#eeeeee"
@@ -9,9 +9,8 @@
     android:padding="5dp" >
 
     <RelativeLayout
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal" >
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" >
 
         <LinearLayout
             android:layout_width="wrap_content"
@@ -57,8 +56,9 @@
 
             <TextView
                 android:id="@+id/title"
-                android:layout_width="wrap_content"
+                android:layout_width="0dp"
                 android:layout_height="match_parent"
+                android:layout_weight="1"
                 android:drawableLeft="@drawable/seperate_line"
                 android:ellipsize="none"
                 android:maxLength="10"
@@ -92,7 +92,7 @@
     </RelativeLayout>
 
     <FrameLayout
-        android:layout_width="fill_parent"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content" >
 
         <!-- 问题标题 -->
@@ -118,30 +118,32 @@
             android:stretchMode="columnWidth"
             android:verticalSpacing="2dp" >
         </scu.android.ui.MGridView>
+
+        <!-- 录音 -->
+        <scu.android.ui.AudioView
+            android:id="@id/audio"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="right|bottom"
+            android:visibility="gone" />
+    </FrameLayout>
+
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" >
+
         <!-- 回复 -->
 
         <ImageButton
             android:id="@+id/reply"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_gravity="left|bottom"
+            android:layout_gravity="right"
             android:layout_margin="5dp"
+            android:background="@drawable/comment_button"
             android:contentDescription="@string/app_name"
             android:focusable="false"
-            android:scaleType="fitXY"
-            android:src="@drawable/comment_button" />
-        <!-- 录音 -->
-
-        <ImageButton
-            android:id="@+id/audio"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="right|bottom"
-            android:layout_margin="5dp"
-            android:contentDescription="@string/app_name"
-            android:focusable="false"
-            android:src="@drawable/voice_button"
-            android:visibility="invisible" />
-    </FrameLayout>
+            android:scaleType="centerCrop" />
+    </RelativeLayout>
 
 </LinearLayout>
