--- a/res/values/styles.xml
+++ b/res/values/styles.xml
@@ -57,7 +57,7 @@
 
     <style name="list_item_time">
         <item name="android:textSize">14.0dip</item>
-        <item name="android:textColor">#e7e2e2</item>
+        <item name="android:textColor">@color/gray_bright</item>
         <item name="android:gravity">right</item>
         <item name="android:paddingRight">5dp</item>
         <item name="android:layout_height">wrap_content</item>
