--- a/res/layout/fragment_friends.xml
+++ b/res/layout/fragment_friends.xml
@@ -21,7 +21,7 @@
 
          </FrameLayout>
          
-    <LinearLayout
+    <!-- <LinearLayout
            
              android:id="@+id/multiChat"
             android:layout_width="fill_parent"
@@ -64,11 +64,11 @@
 	    		android:drawablePadding="2dp" />
             
             
-        </LinearLayout>
+        </LinearLayout> --> 
 
         
   
-   <ListView android:id="@+id/friendListView" android:visibility="visible" android:fadingEdge="none" android:descendantFocusability="blocksDescendants" android:layout_width="fill_parent" android:layout_height="wrap_content" android:cacheColorHint="#00000000" android:divider="#ffb4b4b4" android:dividerHeight="1.0px"  />
+   <ListView android:id="@+id/friendListView" android:visibility="visible" android:fadingEdge="none" android:descendantFocusability="blocksDescendants" android:layout_width="fill_parent" android:layout_height="fill_parent" android:cacheColorHint="#00000000" android:divider="#ffb4b4b4" android:dividerHeight="1.0px"  />
 
    </LinearLayout>
    <RelativeLayout 
