--- a/res/layout/multiroom_list.xml
+++ b/res/layout/multiroom_list.xml
@@ -15,12 +15,12 @@
          </FrameLayout>
 -->
         
-  <TextView 
+  <!-- <TextView 
       android:layout_height="wrap_content"
       android:layout_width="wrap_content"
       android:text="群聊列表"
       android:textSize="25sp"
-      />
+      /> -->
     <ListView android:id="@+id/multiListView" 
        android:visibility="visible"
         android:fadingEdge="none"
