--- a/res/layout/friend_item.xml
+++ b/res/layout/friend_item.xml
@@ -12,29 +12,27 @@
 		    android:gravity="center_vertical"
 		    android:layout_width="fill_parent"
 		    android:layout_height="wrap_content"
-		    android:paddingRight="4.0dip" />
+		    android:paddingRight="4.0dip"
+		    android:text="A" />
 
         <RelativeLayout
             android:layout_below="@id/contactitem_catalog"
             android:id="@+id/friendlink_lay"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
-
-
-			
             android:padding="5dp">
 
             <FrameLayout
                 android:id="@+id/image"
-                android:layout_width="70.0dip"
-                android:layout_height="70.0dip"
+                android:layout_width="48dp"
+                android:layout_height="48dp"
                 android:layout_centerVertical="true"
                 android:layout_gravity="center" >
 
-                <ImageView
+                <scu.android.ui.CircularImage
                     android:id="@+id/friend_icon"
-                    android:layout_width="50.0dip"
-                    android:layout_height="50.0dip"
+                    android:layout_width="48dp"
+                    android:layout_height="48dp"
                     android:layout_gravity="center"
                     android:scaleType="fitXY" 
 					android:src="@drawable/default_avatar"/>
@@ -48,31 +46,45 @@
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="10.0dip"
                 android:layout_marginRight="10.0dip"
-                android:layout_marginTop="10.0dip"
                 android:layout_toRightOf="@id/image"
                 android:singleLine="true"
                 android:text="用户名"
-                android:textColor="#ff333333"
-                android:textSize="16.0sp"
+                
+				style="@style/text_style_big_normal_black"
+				android:textColor="#373737"
 
-                android:textStyle="bold"
-               
 	    		android:drawablePadding="2dp" />
 
             <TextView 
 			    android:layout_below="@id/friend_name" 
 			    android:id="@id/distance_textview"
 			    android:layout_width="wrap_content"
-			    android:layout_height="30dp"
-			    android:text="这是个性签名..."
+			    android:layout_height="wrap_content"
+			    android:text="走过路过，机会不要错过！"
 			    android:gravity="left"
-			    android:layout_marginTop="10dp"
+			    android:layout_marginTop="5dp"
 			    android:layout_alignBottom="@id/list_item_icon"
 			    android:layout_toRightOf="@id/image"
-			    style="@style/text_style_micro_gray"
+			    style="@style/list_item_time"
+			    android:textColor="#898989"
 			    android:layout_marginLeft="10dp"/>
             
         </RelativeLayout>
+        
+        <!-- <ImageView  
+            android:layout_below="@id/friendlink_lay"
+            android:id="@+id/friend_line"
+            android:background="@anim/shape_line_blue_solid"
+             android:layout_width="fill_parent" 
+             android:layout_height="1px"/> -->
+        
+        <View 
+            android:layout_below="@id/friendlink_lay"
+            android:id="@+id/friend_line"
+            android:layout_width="fill_parent"
+            android:layout_height="1dp"
+            android:background="@anim/shape_line_blue_solid"
+            />
     
 
 </RelativeLayout>
