--- a/res/layout/group_item.xml
+++ b/res/layout/group_item.xml
@@ -1,29 +1,75 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout android:id="@+id/scan_item_layout"  
-    android:background="@color/TextColorWhite" android:layout_width="fill_parent" android:layout_height="wrap_content"
-  xmlns:android="http://schemas.android.com/apk/res/android"
-  android:padding="5dp">
+<LinearLayout 
+     xmlns:android="http://schemas.android.com/apk/res/android"
+    
+    android:layout_width="fill_parent"
+    android:layout_height="wrap_content"
+    android:orientation="vertical"
+    >
+<RelativeLayout 
+    android:id="@+id/layout_contact_group"
+    android:layout_width="fill_parent"
+    android:layout_height="wrap_content"
+    android:background="@color/TextColorWhite"
+    android:padding="5dp" >
+
+    <scu.android.ui.CircularImage
+        android:id="@+id/group_icon"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="10dp"
+        android:src="@drawable/contact_group_icon" />
+
+    <TextView
+        android:id="@+id/group_name"
+        style="@style/text_style_big"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerVertical="true"
+        android:layout_marginLeft="10.0dip"
+        android:layout_toRightOf="@id/group_icon"
+        android:singleLine="true"
+        android:text="群聊" 
+        android:textColor="#373737"/>
     
     
-        	<ImageView 
-            	android:layout_marginLeft="10dp"
-            	android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:src="@drawable/group_icon"
-                android:id="@+id/group_icon"        
-            />
-
-            <TextView
-                android:layout_toRightOf="@id/group_icon"
-                android:id="@+id/group_name"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="10.0dip"
-                android:layout_centerVertical="true"
-                android:singleLine="true"
-                android:text="Group"
-           		style="@style/text_style_big"   
-            />
-
+    
+ 
 
 </RelativeLayout>
+<ImageView android:background="@anim/shape_line_blue_solid" android:layout_width="fill_parent" android:layout_height="1px"/>
+
+<RelativeLayout
+    android:id="@+id/layout_contact_new_friend"
+    android:layout_width="fill_parent"
+    android:layout_height="wrap_content"
+    
+    android:background="@color/TextColorWhite"
+    android:padding="5dp" >
+
+    <scu.android.ui.CircularImage
+        android:id="@+id/new_friend_icon"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="10dp"
+        android:src="@drawable/contact_group_icon" />
+
+    <TextView
+        android:id="@+id/new_friend_name"
+        style="@style/text_style_big"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerVertical="true"
+        android:layout_marginLeft="10.0dip"
+        android:layout_toRightOf="@id/new_friend_icon"
+        android:singleLine="true"
+        android:text="新的朋友" 
+        android:textColor="#373737"/>
+    
+    
+    
+ 
+
+</RelativeLayout>
+
+</LinearLayout>
