--- a/res/layout/chat_input_field.xml
+++ b/res/layout/chat_input_field.xml
@@ -10,36 +10,44 @@
         android:layout_height="wrap_content"
         android:background="@drawable/chat_input_lay_bg"
         android:baselineAligned="false"
-        android:focusable="true"  
+        android:focusable="true"
         android:focusableInTouchMode="true"
         android:orientation="horizontal"
-        android:visibility="visible" >
+        android:visibility="visible"
+        android:weightSum="1" >
 
         <RelativeLayout
             android:layout_width="0dp"
             android:layout_height="fill_parent"
-            android:layout_weight="0.15"
-            android:gravity="bottom|center_horizontal" >
-
-
+            android:layout_weight="0.12"
+            android:gravity="bottom|center_horizontal"
+            android:paddingLeft="5dp" >
 
             <TextView
                 android:id="@+id/add_record"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:clickable="true"
-                android:background="@drawable/chat_input_voice_btn_style" 
-                android:layout_marginBottom="9dp"/>
+                android:layout_marginBottom="9dp"
+                android:background="@drawable/chat_input_voice_btn_style"
+                android:clickable="true" />
 
-
-          
+            <TextView
+                android:id="@+id/has_record"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentRight="true"
+                android:layout_alignParentTop="true"
+                android:layout_below="@+id/add_record"
+                android:background="@drawable/icon_news_head_prompt_one"
+                android:visibility="gone" />
         </RelativeLayout>
 
         <RelativeLayout
             android:layout_width="0dp"
             android:layout_height="fill_parent"
-            android:layout_weight="0.15"
-            android:gravity="bottom|center_horizontal" >
+            android:layout_weight="0.12"
+            android:gravity="bottom|center_horizontal"
+            android:paddingLeft="5dp" >
 
             <TextView
                 android:id="@+id/add_extras"
@@ -47,58 +55,59 @@
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="9dp"
                 android:background="@drawable/chat_input_add_btn_style"
-                 
                 android:clickable="true" />
 
+            <TextView
+                android:id="@+id/has_img"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentRight="true"
+                android:layout_alignParentTop="true"
+                android:layout_below="@+id/add_extras"
+                android:background="@drawable/icon_news_head_prompt_one"
+                android:visibility="gone" />
         </RelativeLayout>
-
-        
 
         <RelativeLayout
             android:layout_width="0dp"
             android:layout_height="fill_parent"
-         
-
-            android:layout_weight="0.55"
-
-            android:gravity="bottom|center_horizontal" >
+            android:layout_weight="0.60"
+          
+            android:gravity="center_vertical"
+            android:padding="2dp" >
 
             <EditText
                 android:id="@+id/input_field"
-                android:layout_width="230dp"
+                android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
-               
-				android:textCursorDrawable="@color/TextColorBlack"
-				android:cursorVisible="true"
-                android:maxHeight="90dp"
+                android:layout_centerVertical="true"
+                android:layout_marginLeft="5dp"
                 android:background="@drawable/chat_textview_bg"
+                android:cursorVisible="true"
                 android:inputType="textMultiLine|text"
-                android:textColor="#000000" 
+                android:maxLines="5"
                 android:paddingLeft="2dp"
-                android:layout_marginBottom="10dp"/>
-
-
+                android:textColor="#000000"
+                android:textCursorDrawable="@drawable/edit_cursor" />
         </RelativeLayout>
 
         <RelativeLayout
             android:layout_width="0dp"
             android:layout_height="fill_parent"
-            android:layout_weight="0.2"
+            android:layout_weight="0.16"
             android:gravity="bottom|center_horizontal" >
 
             <TextView
                 android:id="@+id/chat_send"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-
-                android:clickable="true"
-                android:text="发送" 
-                android:padding="6dp"
-                android:gravity="center"
+                android:layout_marginBottom="11dp"
                 android:background="@drawable/button_small_white_style"
-                android:layout_marginBottom="11dp"/>
-
-
+                android:clickable="true"
+                android:gravity="center"
+                android:padding="6dp"
+                android:text="发送"
+                android:textColor="@color/TextColorWhite" />
         </RelativeLayout>
         <!--
                  <TextView
@@ -111,10 +120,31 @@
 	            android:text="按住说话" />
         -->
     </LinearLayout>
+    <!-- YouMingyang添加 -->
 
+    <android.support.v4.view.ViewPager
+        android:id="@+id/extras"
+        android:layout_width="match_parent"
+        android:layout_height="160dp"
+        android:visibility="gone" />
+
+    <include
+        android:id="@+id/thumbnail_popup_layout"
+        android:layout_width="match_parent"
+        android:layout_height="160dp"
+        layout="@layout/thubnail_popup_layout"
+        android:visibility="gone" />
+
+    <!--
     <include
         android:id="@+id/question_popup_layout"
         layout="@layout/question_popup_layout_withoutrecord"
         android:visibility="gone" />
+
+    <include
+        android:id="@+id/voice_popup_layout"
+        layout="@layout/voice_popup_layout"
+        android:visibility="gone" />
+    -->
 
 </LinearLayout>
