--- a/res/layout/item_for_frag_recent.xml
+++ b/res/layout/item_for_frag_recent.xml
@@ -6,10 +6,11 @@
         <RelativeLayout android:id="@+id/home_list_lay" android:layout_width="fill_parent" android:layout_height="wrap_content" >
             <FrameLayout  android:layout_gravity="center" android:id="@+id/image" android:layout_width="70.0dip" android:layout_height="70.0dip" android:layout_centerVertical="true">
                 <ImageView android:layout_gravity="center" android:id="@+id/home_icon" android:scaleType="fitXY" android:layout_width="70.0dip" android:layout_height="70.0dip" />
-                <ImageView android:layout_gravity="center" android:id="@+id/home_list_item_icon_back"  android:layout_width="70.0dip" android:layout_height="70.0dip" android:scaleType="centerInside" />
+                <scu.android.ui.CircularImage android:layout_gravity="center" android:id="@+id/home_list_item_icon_back"  android:layout_width="70.0dip" android:layout_height="70.0dip" android:scaleType="centerInside" />
             </FrameLayout>
-            <TextView android:textSize="16.0sp" android:textStyle="bold" android:textColor="#ff333333" android:id="@+id/home_name" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" android:layout_marginTop="10.0dip" android:layout_marginRight="10.0dip" android:text="用户名" android:singleLine="true" android:layout_toRightOf="@id/image" />
+            <TextView android:textSize="16.0sp" android:textColor="#ff333333" android:id="@+id/home_name" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" android:layout_marginTop="10.0dip" android:layout_marginRight="10.0dip" android:text="用户名" android:singleLine="true" android:layout_toRightOf="@id/image" />
             <TextView android:textSize="13.0sp" android:textColor="#ff333333" android:id="@+id/home_content" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" android:layout_marginRight="10.0dip" android:text="最新消息..." android:maxLines="3" android:layout_toRightOf="@id/image" android:layout_below="@id/home_name" android:layout_marginTop="10dp"/>
+            <TextView android:layout_marginTop="10dp" style="@style/list_item_time" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="1小时前" android:layout_alignParentRight="true" />
               </RelativeLayout>
     </RelativeLayout>
 </RelativeLayout>
